# acpi-rs

./: Cargo.toml  README.md
acpi/: Cargo.toml
acpi/examples/: bgrt-get.rs  mcfg-get.rs  table-get.rs  uefi-get.rs
acpi/src/: lib.rs  unix.rs  windows.rs
