[package]
name = "acpi"
keywords = ["acpi"]
# https://crates.io/category_slugs
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes = "1.5.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
]
